--- a/newrelic.yml
+++ b/newrelic.yml
@@ -3,9 +3,9 @@
 # Ruby, Java, .NET, PHP, and Python applications with deep visibility and low overhead.
 # For more information, visit www.newrelic.com.
 #
-# Generated May 12, 2013
+# Generated June 30, 2013
 #
-# This configuration file is custom generated for app15621158@heroku.com
+# This configuration file is custom generated for app16378959@heroku.com
 
 
 # Here are the settings that are common to all environments
@@ -42,7 +42,7 @@ common: &default_settings
   #       - Ajax Service
   #       - All Services
   #
-  app_name: Wiretap Server
+  app_name: Wiretap
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
